--- a/index.html
+++ b/index.html
@@ -37,10 +37,153 @@
         </nav>
       </div>
     </header>
-    <main>
-      <h1 class="introducao">
-         Novos valores e<br/>Propriedades de CSS
-      </h1>
-    </main>
+
+    <h1 class="introducao">Novos valores e<br />Propriedades de CSS</h1>
+    <section id="sobre" class="sobre">
+      <div class="sobre--info">
+        <h1>Sobre</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit
+          deleniti, incidunt tempora ad soluta dicta, mollitia facilis nam
+          dolorem iure quisquam eum eaque architecto harum? Optio, dolor
+          cupiditate? Harum, odio.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque,
+          sapiente. Id, odio. Laudantium nihil fuga impedit sequi odit! Debitis
+          at error id fuga veritatis quasi, porro ex soluta dolorum ab!
+        </p>
+      </div>
+      <div class="imagem">
+        <img src="assets/img/sobre1.jpg" alt="Mulher de chapeu lendo" />
+      </div>
+      <div class="imagem">
+        <img src="assets/img/sobre2.jpg" alt="Mulher de chapeu lendo" />
+      </div>
+    </section>
+    <section id="produto" class="produto">
+      <h1>Produtos</h1>
+      <div class="produtos-container">
+        <div class="produtos-item purple">
+          <h2>Purple</h2>
+          <img src="assets/img/produtos1.jpg" alt="produto 1" />
+        </div>
+        <div class="produtos-item pink">
+          <h2>Pink</h2>
+          <img src="assets/img/produtos2.jpg" alt="produto 2" />
+        </div>
+        <div class="produtos-item blue">
+          <h2>Blue</h2>
+          <img src="assets/img/produtos3.jpg" alt="produto 3" />
+        </div>
+      </div>
+    </section>
+    <section id="preco" class="preco">
+      <div class="preco--item">
+        <h2>Cobre</h2>
+        <span><sup>R$</sup>19,99</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+        </ul>
+        <a href="" class="comprar">Comprar</a>
+      </div>
+
+      <div class="preco--item">
+        <h2>Prata</h2>
+        <span><sup>R$</sup>39,99</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+          <li>Compra Exclusiva</li>
+        </ul>
+        <a href="" class="comprar">Comprar</a>
+      </div>
+
+      <div class="preco--item">
+        <h2>Ouro</h2>
+        <span><sup>R$</sup>79,99</span>
+        <ul>
+          <li>Planos Ilimitados</li>
+          <li>Acesso Restrito</li>
+          <li>Conteúdo Secreto</li>
+          <li>Suporte 24h</li>
+          <li>Compra Exclusiva</li>
+          <li>Download dos Itens</li>
+        </ul>
+        <a href="" class="comprar">Comprar</a>
+      </div>
+    </section>
+    <section class="qualidade" id="qualidade">
+      <div class="qualidade--item">
+        <h2>Iteligente</h2>
+        <p>
+          O que temos que ter sempre em mente é que a determinação clara de
+          objetivos afeta possitivamente a correta previsão
+        </p>
+      </div>
+      <div class="qualidade--item">
+        <h2>Compacto</h2>
+        <p>
+          O que temos que ter sempre em mente é que a determinação clara de
+          objetivos afeta possitivamente a correta previsão das condições
+          inegavelmente
+        </p>
+      </div>
+      <div class="qualidade--item">
+        <h2>Econômico</h2>
+        <p>
+          O que temos que ter sempre em mente é que a determinação clara de
+          objetivos afeta possitivamente a correta previsão
+        </p>
+      </div>
+      <div class="qualidade--item">
+        <h2>Transparente</h2>
+        <p>
+          O que temos que ter sempre em mente é que a determinação clara de
+          objetivos afeta possitivamente a correta previsão
+        </p>
+      </div>
+      <div class="qualidade--item">
+        <h2>Opaco</h2>
+        <p>
+          O que temos que ter sempre em mente é que a determinação clara de
+          objetivos afeta possitivamente a correta previsão das condições
+          inegavelmente
+        </p>
+      </div>
+      <div class="qualidade--item">
+        <h2>Sustentável</h2>
+        <p>
+          O que temos que ter sempre em mente é que a determinação clara de
+          objetivos afeta possitivamente a correta previsão
+        </p>
+      </div>
+    </section>
+    <section class="newsletter">
+      <div class="newsletter--info">
+        <h1>Newsletter</h1>
+        <p>Assine e fique por dentro das novidades</p>
+      </div>
+      <form class="newsletter-form">
+        <input type="text" name="" id="" placeholder="Seu e-mail" />
+        <button type="submit">Assinar</button>
+      </form>
+    </section>
+    <footer class="footer" id="footer">
+      <p>FlexBog &copy; Alguns direitos reservados</p>
+      <p>
+        Programado por
+        <a
+          href="https://joaosbarbosa.github.io/portfolio-barbosa/"
+          target="_blank"
+          >João Barbosa</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
