Aplicação do resset geral no CSS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
-  <body>
+  <body class="cor2">
     <div class="superinfo--bg cor1">
       <div class="superinfo flex--row">
         <p>Seg/Sex-08:00 às 18:00</p>
