--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
           <a href="./">Flex<span>Blog</span> </a>
         </div>
         <nav class="menu-nav">
-          <button class="btnMobile">Menu
+          <button class="btnMobile">
+            Menu
             <span class="line"></span>
           </button>
           <ul class="flex--row menu-links">
@@ -41,8 +42,10 @@
       </div>
     </header>
 
-    <h1 class="introducao">Novos valores e<br />Propriedades de CSS</h1>
-    <section id="sobre" class="sobre">
+    <h1 class="introducao max-width">
+      Novos valores e<br />Propriedades de CSS
+    </h1>
+    <section id="sobre" class="sobre max-width">
       <div class="sobre--info">
         <h1>Sobre</h1>
         <p>
@@ -57,14 +60,14 @@
           at error id fuga veritatis quasi, porro ex soluta dolorum ab!
         </p>
       </div>
-      <div class="imagem">
+      <div class="sobre-img">
         <img src="assets/img/sobre1.jpg" alt="Mulher de chapeu lendo" />
       </div>
-      <div class="imagem">
+      <div class="sobre-img">
         <img src="assets/img/sobre2.jpg" alt="Mulher de chapeu lendo" />
       </div>
     </section>
-    <section id="produto" class="produto">
+    <section id="produtos" class="produtos">
       <h1>Produtos</h1>
       <div class="produtos-container">
         <div class="produtos-item purple">
