--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <img src="assets/img/sobre2.jpg" alt="Mulher de chapeu lendo" />
       </div>
     </section>
-    <section id="produtos" class="produtos">
+    <section id="produtos" class="produtos max-width">
       <h1>Produtos</h1>
-      <div class="produtos-container">
+      <div class="produtos-container flex--row">
         <div class="produtos-item purple">
           <h2>Purple</h2>
           <img src="assets/img/produtos1.jpg" alt="produto 1" />
@@ -84,7 +84,7 @@
         </div>
       </div>
     </section>
-    <section id="preco" class="preco">
+    <section id="preco" class="preco max-width">
       <div class="preco--item">
         <h2>Cobre</h2>
         <span><sup>R$</sup>19,99</span>
