--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
       </div>
     </section>
-    <section id="preco" class="preco max-width">
+    <section id="preco" class="preco flex--row">
       <div class="preco--item">
         <h2>Cobre</h2>
         <span><sup>R$</sup>19,99</span>
@@ -124,7 +124,7 @@
         <a href="" class="comprar">Comprar</a>
       </div>
     </section>
-    <section class="qualidade" id="qualidade">
+    <section class="qualidade max-width" id="qualidade">
       <div class="qualidade--item">
         <h2>Iteligente</h2>
         <p>
