--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <a href="" class="comprar">Comprar</a>
       </div>
     </section>
-    <section class="qualidade max-width" id="qualidade">
+    <section class="qualidade max-width flex--row" id="qualidade">
       <div class="qualidade--item">
         <h2>Iteligente</h2>
         <p>
