--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </p>
       </div>
     </section>
-    <section class="newsletter">
+    <section class="newsletter flex--row">
       <div class="newsletter--info">
         <h1>Newsletter</h1>
         <p>Assine e fique por dentro das novidades</p>
