Seção do footer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
   </head>
@@ -37,6 +42,7 @@
             <li><a href="#produtos">Produtos</a></li>
             <li><a href="#preco">Preço</a></li>
             <li><a href="#qualidade">Qualidade</a></li>
+            <li><a href="#dev">Desenvolvedor</a></li>
           </ul>
         </nav>
       </div>
@@ -181,15 +187,48 @@
       </form>
     </section>
     <footer class="footer" id="footer">
-      <p>FlexBog &copy; Alguns direitos reservados</p>
-      <p>
-        Programado por
-        <a
-          href="https://joaosbarbosa.github.io/portfolio-barbosa/"
-          target="_blank"
-          >João Barbosa</a
-        >
-      </p>
+      <div class="footer-itens">
+        <div class="logo">
+          <h3></h3>
+
+          <a href="./">
+            <i class="devicon-html5-plain"></i>
+            <p>Flex<span>Blog</span></p>
+          </a>
+        </div>
+
+        <div class="footer--links">
+          <ul class="footer-menu-links">
+            <h3>Links</h3>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#produtos">Produtos</a></li>
+            <li><a href="#preco">Preço</a></li>
+            <li><a href="#qualidade">Qualidade</a></li>
+          </ul>
+        </div>
+        <div class="footer-dev" id="dev">
+          <h3>Desenvolvedor</h3>
+          <div class="icons">
+            <a href="">
+              <i class="devicon-linkedin-plain"></i>
+            </a>
+            <a href="">
+              <i class="devicon-github-original-wordmark"></i>
+            </a>
+            <a href="">
+              <i class="devicon-git-plain"></i>
+            </a>
+            <a
+              href="https://joaosbarbosa.github.io/portfolio-barbosa/"
+              target="_blank"
+              title="Portfólio"
+            >
+              <img src="assets/img/favicon.png" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <p class="copy">FlexBog &copy; Alguns direitos reservados</p>
     </footer>
     <script src="assets/js/scroll.js"></script>
     <script src="assets/js/menuMobile.js"></script>
