--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body class="cor2">
     <div class="superinfo--bg">
@@ -186,6 +193,9 @@
         <button type="submit">Assinar</button>
       </form>
     </section>
+    <div class="scrollBtn">
+      <i class="fa fa-arrow-up"></i>
+    </div>
     <footer class="footer" id="footer">
       <div class="footer-itens">
         <div class="logo">
@@ -209,13 +219,25 @@
         <div class="footer-dev" id="dev">
           <h3>Desenvolvedor</h3>
           <div class="icons">
-            <a href="">
+            <a
+              href="https://www.linkedin.com/in/joao-da-silva-barbosa/"
+              target="_blank"
+              title="Linkedin"
+            >
               <i class="devicon-linkedin-plain"></i>
             </a>
-            <a href="">
+            <a
+              href="https://github.com/JoaoSBarbosa"
+              target="_blank"
+              title="Github"
+            >
               <i class="devicon-github-original-wordmark"></i>
             </a>
-            <a href="">
+            <a
+              href="https://github.com/JoaoSBarbosa/flexblog"
+              target="_blank"
+              title="Repositório"
+            >
               <i class="devicon-git-plain"></i>
             </a>
             <a
